# oracle

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/seeds/: instruction.jsonl  multi_turn.jsonl  scenario.jsonl  tool_use.jsonl
docs/: TRAINING.md  training-guide.md
prompts/: system.txt
src/oracle/: __init__.py  augment.py  cli.py  difficulty.py  json_repair.py  plan.py  schema.py  taxonomy.py
src/oracle/exporters/: __init__.py  nemo.py
src/oracle/generators/: __init__.py  base.py  rfc.py  synthetic.py  tool_use.py
src/oracle/sources/: __init__.py  cabforum.py  dns_software.py  governance.py  iana.py  icann.py  industry.py  psl.py  rfc.py
src/oracle/validators/: __init__.py  quality.py
